--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -3,7 +3,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:fitsSystemWindows="true">
+              android:fitsSystemWindows="true"
+              android:background="@color/colorPrimaryDark">
 
     <LinearLayout
             android:id="@+id/chooseFolderItem"
@@ -20,13 +21,14 @@
                 android:layout_height="wrap_content"
                 android:text="@string/save_path"
                 android:textSize="16dp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/white"/>
 
         <TextView
                 android:id="@+id/pathView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:textColor="@color/colorAccent"
+                android:text="adad"
                 android:textSize="14dp"/>
 
 
