--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryDark">#3A3C3A</color>
-    <color name="colorPrimary">#3A3C3A</color>
+    <color name="colorPrimaryDark">#0a0f10</color>
+    <color name="colorPrimary">#0a0f10</color>
     <color name="colorAccent">#b23435</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
