--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:background">@color/colorPrimaryDark</item>
 
         <!-- Setting a divider is entirely optional -->
         <item name="nnf_list_item_divider">?android:attr/listDivider</item>
@@ -54,6 +55,15 @@
         <item name="android:focusableInTouchMode">true</item>
         <item name="android:isScrollContainer">false</item>
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="MyAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!-- Used for the buttons -->
+        <item name="colorAccent">@color/colorAccent</item>
+        <!-- Used for the title and text -->
+        <item name="android:textColorPrimary">@color/white</item>
+        <!-- Used for the background -->
+        <item name="android:background">@color/colorPrimaryDark</item>
     </style>
 
 </resources>
